--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ coverage.xml
 *.cover
 .hypothesis/
 .pytest_cache/
+Aiste Austrevicius 2:20 PM
 
 # Translations
 *.mo
@@ -80,6 +81,9 @@ celerybeat-schedule
 
 # SageMath parsed files
 *.sage.py
+
+# Mac Finder Settings
+*.DS_Store
 
 # Environments
 .env
