Updated audio requirements. TODO: Figure out tflite_runtime

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,11 @@ picamera
 soundfile
 sounddevice
 python_speech_features
-hmmlearn
+pillow
+librosa
+mathplotlib
+# TODO: add tflite_runtime
+
+# OLD
+#hmmlearn
+
